--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-plugin-flowtype": "^3.0.0",
+    "fibers": "^3.1.1",
     "form-serialize": "^0.7.2",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-router-dom": "^4.3.1",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^3.4.0",
+    "sass": "^1.26.2",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
